orginize code to partials and add option to create new posts

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,1 @@
-<% @posts.each do |post| %>
-    <div>
-        <%= post.name %>
-        <%= post.content %>
-    </div>
-<% end %>
+<%= render "list_posts", posts: @posts %>
