--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,38 @@
   </head>
 
   <body>
-    <%= yield %>
+        <div class="fixed-top navbar bg-green rounded-4 p-12 d-flex m-0 justify-content-center text-center">
+          <div class="nav-item flex-grow-1">
+            <%= link_to "Home", posts_path %>
+          </div>
+
+          <% unless current_user %>
+          <div class="nav-item flex-grow-1">
+            <%= link_to "log in", new_user_session_path%>
+          </div>
+          <div class="nav-item flex-grow-1">
+            <%= link_to "register", new_user_registration_path%>
+          </div>
+          <% end %>
+
+          <% if current_user %>
+          <div class="nav-item flex-grow-1">
+              <%= link_to current_user.email, user_path(current_user.id) %>
+          </div>
+          <% end %>
+      </div>
+
+        <div class="container mt-5">
+          <div class="row">
+            <div class="fixed-top top-50 sidebar rounded-4 p-12 col-1">
+              <div class="new-post btn btn-primary">
+                <%= link_to new_post_path do %>
+                  <%= render inline: Rails.root.join("app/assets/images/icons/add.svg").read %>
+                <% end %>
+              </div>
+            </div>
+            <div class="rounded-4 p-12x col"><%= yield %></div>
+          </div>
+        </div>
   </body>
 </html>
