--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -3,5 +3,5 @@
     <%= form.text_field :name, class: "form-control" %>
     <%= form.label :content, class: "form-label" %>
     <%= form.text_area :content, class: "form-control" %>
-    <%= form.submit "Create", class: "btn btn-primary mt-2" %>
+    <%= form.submit submit_btn_name, class: "btn btn-primary mt-2" %>
 <% end %>
