--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Comments#show</h1>
-<p>Find me in app/views/comments/show.html.erb</p>
+<%= form_with model: @comment do |form| %>
+    <%= form.text_area :content %>
+<% end %>
