--- a/app/views/posts/_list_posts.html.erb
+++ b/app/views/posts/_list_posts.html.erb
@@ -16,10 +16,12 @@
                     <%= link_to "delete", post_path(post.id), data: { "turbo-method": :delete } %>
             </div>
                 <% end %>
-
+                <%= current_user.likes.pluck(:post_id) %>
             <div class="evaluation" data-controller="like">
-                <button onclick="<%= %>" class="btn bg-light" data-like-target="like" data-action="click->like#like">
+                <button class="btn bg-light" data-like-target="like" data-action="click->like#like">
+                    <%= link_to new_post_like_path(post_id: post.id, is_liked: true) do %>
                     <%= render inline: Rails.root.join("app/assets/images/icons/thumb_up.svg").read %>
+                    <% end %>
                 </button>
                 <div class="btn bg-light" data-like-target="dislike" data-action="click->like#dislike">
                     <%= render inline: Rails.root.join("app/assets/images/icons/thumb_down.svg").read %>
