--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,37 +19,63 @@
   </head>
 
   <body class="overflow-y-hidden">
-        <div class="fixed-top navbar bg-green rounded-s4 p-12 d-flex m-0 justify-content-center text-center">
-          <div class="nav-item flex-grow-1">
-            <%= link_to "Home", posts_path %>
+        <div class="fixed-top navbar bg-green rounded-s4 p-12 d-flex m-0 justify-content-around text-center px-5 btn-group-sm" style="gap: 0.5rem !important">
+          <div class="nav-item flex-grow-1 btn btn-primary">
+            <%= link_to posts_path, class: "d-block" do %>
+              <% render inline: Rails.root.join("app/assets/images/icons/home.svg").read %>
+            <% end %>
           </div>
 
           <% unless current_user %>
-          <div class="nav-item flex-grow-1">
-            <%= link_to "log in", new_user_session_path%>
+          <div class="nav-item flex-grow-1 btn btn-primary">
+            <%= link_to "log in", new_user_session_path, class: "d-block" %>
           </div>
-          <div class="nav-item flex-grow-1">
-            <%= link_to "register", new_user_registration_path%>
+          <div class="nav-item flex-grow-1 btn btn-primary">
+            <%= link_to "register", new_user_registration_path, class: "d-block" %>
           </div>
           <% end %>
 
           <% if current_user %>
-          <div class="nav-item flex-grow-1">
-              <%= link_to current_user.email, user_path(current_user.id) %>
+          <div class="nav-item flex-grow-1 btn btn-primary">
+              <%= link_to "You", user_path(current_user.id), class: "d-block text-reset text-decoration-none fs-6" %>
           </div>
           <% end %>
       </div>
 
-        <div class="container mt-5 justify-content-center">
-          <div class="row p-0">
-            <div class="sidebar p-0 rounded-4 col-2">
-              <div class="new-post btn btn-primary">
-                <%= link_to new_post_path do %>
-                  <%= render inline: Rails.root.join("app/assets/images/icons/add.svg").read %>
+        <div class="container pt-3 mx-0 mt-5 justify-content-center">
+          <div class="row p-0 vw-100" style="gap: 0.5rem !important;">
+            <div class="d-flex flex-column align-items-center justify-content-between py-2 col-2 rounded-4 border" style="height: 92vh !important; max-width: 5rem !important;">
+              <div class="public d-flex flex-column align-items-center justify-content-center gap-2 col-2">
+                <div class="new-post btn btn-primary">
+                  <%= link_to new_post_path do %>
+                    <%= render inline: Rails.root.join("app/assets/images/icons/add.svg").read %>
+                  <% end %>
+                </div>
+                <div class="user_search btn btn-primary">
+                  <%= link_to users_path do %>
+                    <%= render inline: Rails.root.join("app/assets/images/icons/person_search.svg").read %>
+                  <% end %>
+                </div>
+              </div>
+
+              <div class="private d-flex flex-column align-items-center justify-content-center gap-2 col-2">
+              <div class="requests btn btn-primary">
+                <%= link_to users_path do %>
+                  <%= render inline: Rails.root.join("app/assets/images/icons/follow_request.svg").read %>
                 <% end %>
               </div>
+              <div class="settings btn btn-primary">
+                <%= link_to users_path do %>
+                  <%= render inline: Rails.root.join("app/assets/images/icons/settings.svg").read %>
+                <% end %>
+              </div>
+              <div class="sign-out btn btn-primary"><%= link_to destroy_user_session_path, data: { "turbo-method": :delete } do %>
+                <%= render inline: Rails.root.join("app/assets/images/icons/logout.svg").read %>
+              <% end %>
+              </div>
+              </div>
             </div>
-            <div class="rounded-4 p-2 col view-limit overflow-y-auto"><%= yield %></div>
+            <div class="rounded-4 border p-2 col view-limit overflow-y-auto"><%= yield %></div>
           </div>
         </div>
   </body>
