add ability to edit posts

--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,5 +1,7 @@
-<%= form_with model: [@post, @comment] do |form| %>
-    <%= form.label :content, class: "form-label" %>
-    <%= form.text_area :content, class: "form-control" %>
-    <%= form.submit "Create", class: "btn btn-primary mt-2" %>
-<% end %>
+<turbo-frame id="comment">
+    <%= form_with model: [@post, @comment] do |form| %>
+        <%= form.label :content, "Comment", class: "form-label" %>
+        <%= form.text_area :content, class: "form-control" %>
+        <%= form.submit "Post", class: "btn btn-primary mt-2" %>
+    <% end %>
+</turbo-frame>
