--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,33 +4,45 @@
         <%= @post.content%>
     </p>
 </div>
-<div class="tags m-2">
-<span class="border rounded-pill text-bg-light p-2 m-2">
+<div class="tags m-2 flex-wrap d-flex gap-1 align-items-center">
+<span class="border rounded-pill text-bg-light p-1">
     <span>by: </span>
-    <span class="fs-3"><%= render inline: Rails.root.join("app/assets/images/icons/pets.svg").read %></span>
-    <span class="fs-4">
-        <%= link_to User.find(@post.owner_id).email, user_path(User.find(@post.owner_id).id) %>
+    <span>
+        <%= link_to User.find(@post.owner_id).username, user_path(User.find(@post.owner_id).id) %>
     </span>
 </span>
-    <span class="border rounded-pill text-bg-light p-1">created: <%= @post.created_at.strftime("%H:%M %Y-%m-%d") %></span>
-    <% unless @post.updated_at == @post.created_at %>
-    <span class="border rounded-pill text-bg-light p-1">modified: <%= @post.updated_at.strftime("%H:%M %Y-%m-%d") %></span>
-    <% end %>
+    <span>
+        <span class="border rounded-pill text-bg-light p-1">created: <%= @post.created_at.strftime("%H:%M %Y-%m-%d") %></span>
+        <% unless @post.updated_at == @post.created_at %>
+        <span class="border rounded-pill text-bg-light p-1">modified: <%= @post.updated_at.strftime("%H:%M %Y-%m-%d") %></span>
+        <% end %>
+    </span>
 </div>
 <div class="comments p-1">
     <% if @post.comments.first %>
     <div><%= "comments: " %></div>
     <% end %>
     <% @post.comments.each do |comment| %>
-        <div class="comment border border-top-0 rounded m-1 p-1">
-            <div class="d-flex comment rounded p-1 bg-light fs-5">
-                    <div class=""><%= comment.content %></div>
-                    <div class="ms-auto"><%= render inline: Rails.root.join("app/assets/images/icons/edit.svg").read %></div>
+        <turbo-frame id="comment_<%= comment.id %>">
+            <div class="comment border border-top-0 rounded m-1 p-1">
+            <div class="d-flex comment rounded p-2 bg-light fs-5 btn-group-sm">
+                    <div><%= comment.content %></div>
+                    <div class="ms-auto btn btn-secondary">
+                    <% if comment.owner_id == current_user.id %>
+                    <%= link_to edit_comment_path(comment.id) do %>
+                    <%= render inline: Rails.root.join("app/assets/images/icons/edit.svg").read %>
+                    <% end %>
+                    <% end %>
+                    </div>
             </div>
-            <div class="author fs-6 text">by: <%= link_to User.find(comment.owner_id).email, user_path(User.find(comment.owner_id).id) %></div>
+            <% username = User.find(comment.owner_id).id == current_user.id ? "You" : User.find(comment.owner_id).username %>
+            <div class="author fs-6 text">by: <%= link_to username, user_path(User.find(comment.owner_id).id) %></div>
+            </turbo-frame>
         </div>
     <% end %>
 </div>
-<div class="btn border-primary mt-1">
-    <%= link_to "Comment", new_post_comment_path(params[:id]) %>
-</div>
+<turbo-frame id="comment">
+    <div class="btn border-primary mt-1">
+        <%= link_to "Comment", new_post_comment_path(params[:id]) %>
+    </div>
+</turbo-frame>
