--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,7 +1,3 @@
 <turbo-frame id="comment">
-    <%= form_with model: [@post, @comment] do |form| %>
-        <%= form.label :content, "Comment", class: "form-label" %>
-        <%= form.text_area :content, class: "form-control" %>
-        <%= form.submit "Post", class: "btn btn-primary mt-2" %>
-    <% end %>
+    <%= render "form", post: @post, comment: @comment %>
 </turbo-frame>
