--- a/app/views/posts/_list_posts.html.erb
+++ b/app/views/posts/_list_posts.html.erb
@@ -1,49 +1,5 @@
 <% posts.each do |post| %>
-    <div class="card p-2 mt-2 border-0 border-bottom rounded-3">
-        <div class="card-title">
-            <%= link_to post.name, post_path(post.id) %>
-        </div>
-        <div class="card-text">
-            <%= post.content %>
-        </div>
-            <% if @likes.include?(post.id) && current_user.likes.find_by(post_id: post.id).is_liked == true %>
-            <% like_color = "bg-primary" %>
-            <% end %>
-            <% if @likes.include?(post.id) && current_user.likes.find_by(post_id: post.id).is_liked == false %>
-            <% dislike_color = "bg-primary" %>
-            <% end %>
-            <div class="likes d-flex justify-content-between">
-                <div class="d-flex btn-group btn-group-sm">
-                    <%= form_with model: post.likes.build, url: likes_path, class: "btn-group btn-group-sm", method: :post, local: true do |form| %>
-                        <%= form.hidden_field :post_id, value: post.id %>
-                        <%= form.hidden_field :is_liked, value: true %>
-                        <%= button_tag(class: "#{like_color} btn btn-secondary like_button rounded-start-pill") do %>
-                            <%= render inline: Rails.root.join("app/assets/images/icons/thumb_up.svg").read %>
-                        <% end %>
-                    <% end %>
-                    <%= form_with model: post.likes.build, url: likes_path, class: "btn-group btn-group-sm", method: :post, local: true do |form| %>
-                        <%= form.hidden_field :post_id, value: post.id %>
-                        <%= form.hidden_field :is_liked, value: false %>
-                        <%= button_tag(class: "#{dislike_color} btn btn-secondary like_button rounded-end-pill") do %>
-                            <%= render inline: Rails.root.join("app/assets/images/icons/thumb_down.svg").read %>
-                        <% end %>
-                    <% end %>
-                </div>
-        <div class="d-flex gap-2 justify-content-end">
-            <% if post.owner_id == current_user.id %>
-            <div class="btn-group btn-group-sm bg-light">
-                    <%= link_to edit_post_path(post.id), class: "btn btn-secondary" do %>
-                        <%= render inline: Rails.root.join("app/assets/images/icons/edit.svg").read %>
-                    <% end %>
-            </div>
-            <div class="btn-group btn-group-sm bg-light">
-                    <%= link_to post_path(post.id), class: "btn btn-secondary", data: { "turbo-method": :delete } do %>
-                        <%= render inline: Rails.root.join("app/assets/images/icons/delete.svg").read %>
-                    <% end %>
-            </div>
-            <% end %>
-        </div>
-    </div>
-</div>
+    <%= render "post",
+    post: post%>
 <% end %>
 
