--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,1 +1,3 @@
-<%= render "form", post: @post, submit_btn_name: "Edit" %>
+<%= turbo_frame_tag @post do %>
+    <%= render "form", post: @post, submit_btn_name: "Edit" %>
+<% end %>
