--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
       </div>
 
         <div class="container pt-3 mx-0 mt-5 justify-content-center">
-          <div class="row p-0 vw-100" style="gap: 0.5rem !important;">
+          <div class="row p-0 vw-100 mx-1" style="gap: 0.5rem !important; width: 95vw !important;">
             <div class="d-flex flex-column align-items-center justify-content-between py-2 col-2 rounded-4 border" style="height: 92vh !important; max-width: 5rem !important;">
               <div class="public d-flex flex-column align-items-center justify-content-center gap-2 col-2">
                 <div class="new-post btn btn-primary">
