--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
   </head>
 
   <body class="overflow-y-hidden">
-        <div class="fixed-top navbar bg-green rounded-s4 p-12 d-flex m-0 justify-content-around text-center px-5 btn-group-sm" style="gap: 0.5rem !important">
+        <div class="fixed-top navbar bg-light bg-gradient rounded-s4 p-12 d-flex m-0 justify-content-around text-center px-5 btn-group-sm" style="gap: 0.5rem !important">
           <div class="nav-item flex-grow-1 btn btn-primary">
             <%= link_to posts_path, class: "d-block" do %>
               <% render inline: Rails.root.join("app/assets/images/icons/home.svg").read %>
