--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,40 +1,44 @@
 <%= turbo_frame_tag post do %>
-    <div class="card p-2 mt-2 border-0 border-bottom rounded-3 bg-light bg-gradient">
-        <div class="card-title">
-            <turbo-frame target="_top"><%= link_to post.name, post_path(post.id), class: " text-reset text-decoration-none fw-semibold" %></turbo-frame>
-        </div>
-        <div class="card-text text-secondary text-opacity-75">
-            <%= post.content %>
-        </div>
-
-        <% if current_user.likes.pluck(:post_id).include?(post.id) && current_user.likes.find_by(post_id: post.id).is_liked == true %>
-            <% like_color = "bg-primary" %>
-        <% elsif current_user.likes.pluck(:post_id).include?(post.id) && current_user.likes.find_by(post_id: post.id).is_liked == false %>
-            <% dislike_color = "bg-primary" %>
-        <% end %>
-
-
-            <div class="likes d-flex justify-content-between">
-                <div class="d-flex btn-group btn-group-sm">
-                 <%= render "posts/opinion_button",
-                    post: post,
-                    is_liked: true,
-                    button_color: like_color,
-                    icon: "thumb_up",
-                    rounding: "start" %>
-                <%= render "posts/opinion_button",
-                    post: post,
-                    is_liked: false,
-                    button_color: dislike_color,
-                    icon: "thumb_down",
-                    rounding: "end" %>
+    <div class="card p-2 mt-2 border-0 border-bottom rounded-3 bg-light bg-gradient d-grid">
+        <div class="row">
+            <div class="col-1">
+                <%= render "shared/profile_photo", user: User.find(post.owner_id), size: 2.5 %>
+            </div>
+            <div class="col-6">
+                <div class="card-title">
+                    <turbo-frame target="_top"><%= link_to post.name, post_path(post.id), class: " text-reset text-decoration-none fw-semibold" %></turbo-frame>
                 </div>
-        <div class="d-flex gap-2 justify-content-end">
-            <% if post.owner_id == current_user.id %>
-            <%= render "posts/edit_button", post: post %>
-            <%= render "posts/delete_button", post: post %>
-            <% end %>
+                <div class="card-text text-secondary text-opacity-75">
+                    <%= post.content %>
+                </div>
+                <% if current_user.likes.pluck(:post_id).include?(post.id) && current_user.likes.find_by(post_id: post.id).is_liked == true %>
+                    <% like_color = "bg-primary" %>
+                <% elsif current_user.likes.pluck(:post_id).include?(post.id) && current_user.likes.find_by(post_id: post.id).is_liked == false %>
+                    <% dislike_color = "bg-primary" %>
+                <% end %>
+                    <div class="likes d-flex justify-content-between">
+                        <div class="d-flex btn-group btn-group-sm">
+                         <%= render "posts/opinion_button",
+                            post: post,
+                            is_liked: true,
+                            button_color: like_color,
+                            icon: "thumb_up",
+                            rounding: "start" %>
+                        <%= render "posts/opinion_button",
+                            post: post,
+                            is_liked: false,
+                            button_color: dislike_color,
+                            icon: "thumb_down",
+                            rounding: "end" %>
+                        </div>
+                <div class="d-flex gap-2 justify-content-end">
+                    <% if post.owner_id == current_user.id %>
+                    <%= render "posts/edit_button", post: post %>
+                    <%= render "posts/delete_button", post: post %>
+                    <% end %>
+                </div>
+                </div>
+            </div>
         </div>
-    </div>
 </div>
 <% end %>
