--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,21 +1,3 @@
 <% @users.each do |user| %>
-    <div class="card p-2 mt-2 border-0 border-bottom rounded-3">
-        <div class="d-flex gap-3 justify-content-between btn-group-sm">
-            <div class="card-title">
-                <%= link_to user.username, user_path(user.id) %>
-            </div>
-            <div>
-                <%= turbo_frame_tag user do %>
-                    <% if current_user.follow_requests.pluck(:receiver_id).include?(user.id) %>
-                        <%= render "shared/pending_button" %>
-                    <% else %>
-                        <%= render "follow_requests/request", receiver_id: user.id %>
-                    <% end %>
-                <% end %>
-            </div>
-        </div>
-        <div class="card-text">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-        </div>
-    </div>
+    <%= render "user_card", user: user %>
 <% end %>
