add color higlight of the navigation

--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -4,7 +4,7 @@
             <%= link_to "Followed", user_subscriptions_path, class: "d-block text-decoration-none text-reset" %>
         </div>
         <div class="btn btn-outline-primary p0 col rounded-2 <%= @subscriber_button %>">
-            <%= link_to "Subscribers", user_subscriptions_path(followers: true), class: "d-block text-decoration-none text-reset" %>
+            <%= link_to "Followers", user_subscriptions_path(followers: true), class: "d-block text-decoration-none text-reset" %>
         </div>
     </div>
 </div>
