--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,24 +19,24 @@
   </head>
 
   <body class="overflow-y-hidden">
-        <div class="fixed-top navbar bg-light bg-gradient rounded-s4 p-12 d-flex m-0 justify-content-around text-center px-5 btn-group-sm" style="gap: 0.5rem !important">
-          <div class="nav-item flex-grow-1 btn btn-primary">
+        <div class="fixed-top navbar bg-light bg-gradient rounded-s4 p-12 d-flex m-0 justify-content-around text-center px-5 btn-group-sm text-primary" style="gap: 0.5rem !important">
+          <div class="nav-item flex-grow-1 btn btn-outline-primary text-primary <%= if params[:controller] == "posts" && params[:action] == "index"; "bg-primary text-white"; else; "btn-secondary text-white";end %>">
             <%= link_to posts_path, class: "d-block" do %>
               <% render inline: Rails.root.join("app/assets/images/icons/home.svg").read %>
             <% end %>
           </div>
 
           <% unless current_user %>
-          <div class="nav-item flex-grow-1 btn btn-primary">
+          <div class="nav-item flex-grow-1 btn btn-outline-primary">
             <%= link_to "log in", new_user_session_path, class: "d-block text-reset text-decoration-none" %>
           </div>
-          <div class="nav-item flex-grow-1 btn btn-primary">
+          <div class="nav-item flex-grow-1 btn btn-outline-primary">
             <%= link_to "register", new_user_registration_path, class: "d-block text-reset text-decoration-none" %>
           </div>
           <% end %>
 
           <% if current_user %>
-          <div class="nav-item flex-grow-1 btn btn-primary">
+          <div class="nav-item flex-grow-1 btn btn-outline-primary <%= if params[:controller] == "users" && params[:id].to_i == current_user.id; "bg-primary text-white";end %>">
               <%= link_to "You", user_path(current_user.id), class: "d-block text-reset text-decoration-none fs-6" %>
           </div>
           <% end %>
