--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,5 @@
 <% @users.each do |user| %>
-    <%= render "user_card", user: user %>
+    <% unless user.id == current_user.id %>
+        <%= render "user_card", user: user %>
+    <% end %>
 <% end %>
